@@ -1,3 +1,12 @@
+2006-10-14  Paolo Borelli  <pborelli@katamail.com>
+
+	* src/baobab.[ch]:
+	* src/baobab-utils.[ch]:
+	* src/gedit-spinner.[ch]:
+
+	Update to the latest version of the spinner and misc related
+	cleanups and fixes.
+
 2006-10-11  Fabio Marzocca  <thesaltydog@gmail.com>
 
 	* src/baobab-treeview.c: (create_directory_treeview):
